--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/robertoApimenta/greenacesso#readme",
   "dependencies": {
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.5.1",
     "sequelize": "^6.32.1",
     "sequelize-cli": "^6.6.1"
