--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   },
   "homepage": "https://github.com/robertoApimenta/greenacesso#readme",
   "dependencies": {
+    "csv-parse": "^5.4.0",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.5.1",
+    "neat-csv": "^7.0.0",
     "sequelize": "^6.32.1",
     "sequelize-cli": "^6.6.1"
   },
