--- a/package.json
+++ b/package.json
@@ -19,11 +19,17 @@
   },
   "homepage": "https://github.com/robertoApimenta/greenacesso#readme",
   "dependencies": {
+    "asposewordscloud": "^23.5.0",
     "csv-parse": "^5.4.0",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
+    "hummus": "^1.0.115",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.5.1",
     "neat-csv": "^7.0.0",
+    "pdf-lib": "^1.17.1",
+    "pdf2json": "^3.0.4",
+    "scissors": "^0.3.0",
     "sequelize": "^6.32.1",
     "sequelize-cli": "^6.6.1"
   },
